--- a/transaction-service/src/main/resources/application.properties
+++ b/transaction-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port = 7000
-spring.datasource.url = jdbc:mysql://localhost:3306/wallet_db?createDatabaseIfNotExist=true
+server.port = 8000
+spring.datasource.url = jdbc:mysql://localhost:3306/transaction_db?createDatabaseIfNotExist=true
 spring.datasource.username = root
 spring.datasource.password =
 spring.jpa.hibernate.ddl-auto=update
